2004-07-20  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: added support to tk framework build to
	optionally install tk manpages in addition to html help,
	similarly to tcl/macosx/Makefile.
	
	* macosx/Wish.pbproj/project.pbxproj: fixes for building with
	non-default SYMROOT/OBJROOT/SRCROOT, added support for using a
	Tcl.framework in DYLIB_INSTALL_PATH != /Library/Frameworks,
	added optional support for building html help without tcl sources 
	present by giving explicit location of tcltk-man2html script.
	
	* macosx/tkMacOSXMenu.c: fixed #include case sensitivity bug.

	* unix/Makefile.in:
	* win/Makefile.in: added 'install-private-headers' makefile target
	to allow optionally installing private tk headers. [Tcl FR 922727]

2004-07-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in, unix/tcl.m4:     move (C|LD)FLAGS after their
	* unix/configure.in, unix/configure: _DEFAULT to allow for env
	setting to override m4 switches.
	Consolidate header checks to limit redundancy in configure.
	(CFLAGS_WARNING): Remove -Wconversion
	(SC_ENABLE_THREADS): Set m4 to force threaded build when built
	against a threaded Tcl core.
	Reorder configure.in for better 64-bit build configuration,
	replacing EXTRA_CFLAGS with CFLAGS.  [Bug #874058]

2004-07-14  Jim Ingham  <jingham@apple.com>

        * macosx/tkMacOSXCursor.c (TkpSetCursor): The code to not
        reset the cursor more often than necessary was getting fooled
        when the current cursor was nulled out when the current cursor
        gets freed.  So in the case where the input cursor was NULL, we
        have to just always set it. [Bug #894550]

2004-07-13  Don Porter  <dgp@users.sourceforge.net>

	* library/tkfbox.tcl: Corrected coding errors in most recent change.
	Use [bind $w], not [$w configure] to modify bindings.

2004-07-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/tkfbox.tcl (::tk::dialog::file::Create): Watch out for